--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,5 +14,5 @@ jobs:
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: ${{ 32c65ccb41369d010cdeb1018a517142 }}
-          TIMEZONE: ${{ Asia/Seoul }}
+          GIST_ID: "32c65ccb41369d010cdeb1018a517142"
+          TIMEZONE: "Asia/Seoul"
